  the `O_EXCL` flag to create the target file. This should allow things
  to work with both NFS and VFAT.
* More detailed progress reporting during the backup setup phase.
* Manual page now covers the diff subcommand. Patch by Peter Valdemar Mørch.
* Speed optimisation patch for backing up files in inode numbering order,
  from Christophe Vu-Brugier.

Bug fixes:

* Empty values for extended attributes are now backed up correctly.
  Previously they would cause an infinite loop.
* Extended attributes without values are now ignored. This is different
  from attributes with empty values. Reported by Vladimir Elisseev.
* An empty port number in sftp URLs is now handled correctly. Found based
  on report by Anton Shevtsov.
* A bad performance bug when backing up full systems (starting from the
  filesystem root directory) has been fixed. At the beginning of each
  generation, Obnam removes any directories that are not part of the
  current backup roots. This is necessary so that if you change the
  backup roots, the old stuff doesn't hang around forever. However, when
  the backup root is the filesystem root, due to the now-fixed bug Obnam
  would first remove everything, and then back it up all over again. This
  "worked", but was quite slow. Thanks to Nix for reporting the problem.
* Obnam now runs GnuPG explicitly with the "no text mode" setting, to override
  a "text mode" setting in the user's configuration. The files Obnam encrypts
  need to be treated as binary, not text files. Reported by Robin Sheat.
* A shared B-tree concurrency bug has been fixed: If another instance of
  Obnam was modifying a shared B-tree, Obnam would crash and abort a backup,
  possibly leaving lock files lying around. Now a failure to look up a chunk
  via its checksum is ignored, and the backup continues.
* Bugs in how Python OSError exceptions were being raises have been fixed.
  Error messages should now be somewhat clearer.